--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,10 @@
             <version>1.3.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
 
     </dependencies>
 
