--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.http.multipart.maxRequestSize=1000MB
 # Specify the DBMS
 spring.jpa.database=MYSQL
 # Show or not log for each sql query
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/knowledgegraph?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
@@ -31,6 +31,8 @@ spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
 # 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
 spring.datasource.filters=stat,wall,log4j
 ################################################################
+spring.thymeleaf.cache=false
+##################################
 spider.abc=hello
 
 
