--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,18 @@
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional><!-- optional=true,依赖不会传递，该项目依赖devtools；之后依赖myboot项目的项目如果想要使用devtools，需要重新引入 -->
         </dependency>
+        <!--&lt;!&ndash; 计算相似度用到的包-分词 &ndash;&gt;-->
+        <!--<dependency>-->
+        <!--<groupId>org.apache.lucene</groupId>-->
+        <!--<artifactId>lucene-core</artifactId>-->
+        <!--<version>3.6.0</version>-->
+        <!--</dependency>-->
+        <!-- 计算相似度用到的包 -分词-->
+        <dependency>
+            <groupId>com.janeluo</groupId>
+            <artifactId>ikanalyzer</artifactId>
+            <version>2012_u6</version>
+        </dependency>
 
 
     </dependencies>
