--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,13 @@
     <groupId>com.xjtu</groupId>
     <artifactId>knowledgegraph</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
 
 
     <properties>
         <!--spring-boot-starter-parent选择相当保守的Java兼容策略1.6。建议使用最新的Java版本， -->
         <java.version>1.8</java.version>
+
     </properties>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -23,6 +25,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
         </dependency>
 
         <!-- JPA Data (We are going to use Repositories, Entities, Hibernate, etc...) -->
@@ -97,6 +104,7 @@
 
 
     <build>
+        <finalName>knowledgegraph</finalName>
         <plugins>
 
             <!-- 用于将应用打成可直接运行的jar（该jar就是用于生产环境中的jar） 值得注意的是，如果没有引用spring-boot-starter-parent做parent，
