--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #root  (can be none! )
-#server.context-path=/knowledgegraph
+server.context-path=/knowledgegraph
 ######################################################################################
 spring.http.multipart.maxFileSize=100MB
 spring.http.multipart.maxRequestSize=1000MB
@@ -10,9 +10,12 @@ spring.jpa.database=MYSQL
 # Show or not log for each sql query
 #spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://202.117.54.85:3306/knowledgegraph?useUnicode=true&characterEncoding=utf-8
-spring.datasource.username=root
-spring.datasource.password=root
+#spring.datasource.url=jdbc:mysql://202.117.54.85:3306/knowledgegraph?useUnicode=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://10.100.136.39:3306/knowledgegraph?useUnicode=true&characterEncoding=utf-8
+#spring.datasource.username=root
+spring.datasource.username=graph
+#spring.datasource.password=root
+spring.datasource.password=abcd7890
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 # 下面为连接池的补充设置，应用到上面所有数据源中
 # 初始化大小，最小，最大
