--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #root  (can be none! )
-server.context-path=/knowledgegraph
+#server.context-path=/knowledgegraph
 ######################################################################################
 spring.http.multipart.maxFileSize=100MB
 spring.http.multipart.maxRequestSize=1000MB
