增加了一些注释，在每个package后面增加了readme.md文件

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 #root  (can be none! )
 #server.context-path=/knowledgegraph
 ######################################################################################
+# 如果你的mysql设置了更小的，会已mysql为主
 spring.http.multipart.maxFileSize=100MB
 spring.http.multipart.maxRequestSize=1000MB
 #spring.http.multipart.location=D:\   #位置取决于你的上传控制器里写的
@@ -34,9 +35,9 @@ spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
 # 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
 spring.datasource.filters=stat,wall,log4j
 ################################################################
-spring.thymeleaf.cache=false
-##################################
-spider.abc=hello
+# 开发的时候请将此项设置为false
+spring.thymeleaf.cache=true
+
 
 
 
