--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,23 @@
 *.jar
 *.war
 *.ear
+*.class
+*.iml,*.idea
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+.idea/
+.idea/*
+# Package Files #
+*.jar
+*.war
+.idea/*
+.idea*
+\.idea*
+*.ear
+target
+hs_err_pid*
+'.idea'
+
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
