--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -18,7 +18,7 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 ################################################################
 # 开发的时候请将此项设置为false
-spring.thymeleaf.cache=true
+spring.thymeleaf.cache=false
 
 
 
