修改正式平台数据库连接信息

--- a/src/main/resources/application-ops.properties
+++ b/src/main/resources/application-ops.properties
@@ -11,9 +11,9 @@ spring.jpa.database=MYSQL
 # Show or not log for each sql query
 #spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://10.100.136.39:3306/knowledgegraph?useUnicode=true&characterEncoding=utf-8
-spring.datasource.username=graph
-spring.datasource.password=abcd7890
+spring.datasource.url=jdbc:mysql://10.100.16.182:3306/knowledgegraph?useUnicode=true&characterEncoding=utf-8
+spring.datasource.username=tianjy
+spring.datasource.password=123tian@JY
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 ################################################################
 # 开发的时候请将此项设置为false
