--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,7 +9,7 @@ spring.http.multipart.maxRequestSize=1000MB
 # Specify the DBMS
 spring.jpa.database=MYSQL
 # Show or not log for each sql query
-#spring.jpa.show-sql=true
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/knowledgegraph?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
